# feedsmanager

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
feedsmanager/: __init__.py  app.py  audit.py  background.py  config.py  export_import.py  feed_parser.py  models.py  runner.py  storage.py  users.py
feedsmanager/screens/: admin_panel.py  categories.py  category_form.py  confirm.py  dashboard.py  export_import.py  feed_form.py  feed_posts.py  login.py  settings.py
tests/: conftest.py  test_app_cli.py  test_audit.py  test_background.py  test_config.py  test_export_import.py  test_feed_parser.py  test_models.py  test_storage.py  test_users.py
